# flat_engine

./: .gitignore  CMakeLists.txt  README.MD
dependencies/: CMakeLists.txt
dependencies/glm/gtx/: rotate_vector.inl
dependencies/slm/: float_util.h  intersect_util.h  mat4.h  mtrnd.h  no_simd.h  quat.h  runtime_checks.h  simd.h  slmath.h  slmath_configure.h  slmath_pp.h  vec2.h  vec3.h  vec4.h  vec_impl.h  vector_simd.h
dependencies/stb/: stb_image.h
engine/: CMakeLists.txt
engine/dependencies/: CMakeLists.txt
engine/dependencies/stb/: stb_image.h
engine/src/: entry.hpp
engine/src/client/: client_engine.cpp  client_engine.hpp  client_network.h
engine/src/display/: display_objects.hpp  display_system.hpp  district_renderer.cpp  district_renderer.hpp  draw_info.cpp  draw_info_factory.hpp  game_camera.cpp  game_camera.hpp  renderer.cpp  renderer.hpp  renderer_world.hpp  texture_manager.cpp  texture_manager.hpp  vertices.hpp
engine/src/entities/: base_entity.cpp  base_entity.hpp
engine/src/factory/: definitions.hpp  engine.cpp  engine.hpp  flat_math.cpp
engine/src/generators/: so_gens.cpp  so_gens.hpp  terrain_gens.cpp  terrain_gens.hpp
engine/src/graphics/: CMakeLists.txt
engine/src/graphics/dependencies/glad/include/glad/: glad.h
engine/src/graphics/dependencies/glad/src/: glad.c
engine/src/graphics/include/: camera.hpp  renderer.hpp  texture.hpp  texture_manager.hpp
engine/src/graphics/include/opengl/: opengl_graphics_constants.hpp  opengl_renderer.hpp  opengl_shader.hpp  opengl_texture.hpp  opengl_texture_manager.hpp  opengl_vertex_buffer.hpp
engine/src/graphics/res/opengl/: CMakeLists.txt  sprite.frag  sprite.vert
engine/src/graphics/src/: renderer.cpp
engine/src/graphics/src/opengl/: opengl_renderer.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_texture_manager.cpp  opengl_vertex_buffer.cpp
engine/src/network/: CMakeLists.txt
engine/src/network/include/client/: network_client.h
engine/src/network/include/server/: network_server.h  network_server.hpp  server_session.h  session_controller.h
engine/src/network/include/shared/: connection.h  deserializer.h  message_io.h  messages.h  network_settings.h  session.h  transport.h  udp_dispatcher.h
engine/src/network/src/server/: network_server.cpp  server_session.cpp
engine/src/network/src/shared/: connection.cpp  message_io.cpp  transport.cpp
engine/src/physics/: base_physics.cpp  base_physics.hpp  collisions.cpp  collisions.hpp  district_net.cpp  district_net.hpp  physics.hpp  space_objects.cpp  space_objects.hpp
engine/src/server/: server_engine.hpp
engine/src/shaders/: shader.hpp
engine/src/texts/: texts.cpp
engine/src/utils/: common.hpp  constants.hpp  hash.hpp  int_clock.hpp  pool_id.hpp  scheduler.hpp
engine/src/utils/common/: matrix.tpp
engine/src/utils/synchronizer/: clock_sync.hpp  sync_constants.hpp
game/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  main.hpp
game/client/: CMakeLists.txt
game/client/resources/shaders/: frag.sh
game/client/src/: client_constants.h  game.hpp  main.cpp  main.hpp
game/client/src/client_game_engine/: game.cpp  game.hpp
game/server/: CMakeLists.txt
game/server/src/: main.cpp  main.hpp
game/server/src/game_server/: game_server.cpp  game_server.hpp  session_controller.cpp  session_controller.hpp
game/server/src/network/: server_game_deserializer.hpp  server_game_messages.hpp
game/server/src/network/messages/: player_avatar_message.hpp
game/shared/: CMakeLists.txt
game/shared/include/: game_deserializer.hpp  game_messages.hpp  player_data.hpp  routes.hpp  serializer.hpp  shared_constants.hpp  shared_game_deserializer.hpp  shared_game_messages.hpp  shared_serializer.hpp
game/shared/include/messages/: text_message.hpp
game/shared/schemas/: player_avatar.fbs  text_message.fbs
game/shared/src/: game.cpp  game.hpp  main.cpp
resources/shaders/: vertex.sh
src/: entry.hpp
src/display/: camera.cpp  camera.hpp  draw_info.cpp  draw_info.h  renderer.cpp  renderer.hpp  shape.cpp  shape.hpp  texture.cpp  texture_manager.cpp  texture_manager.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertices.cpp  vertices.hpp
src/entities/: base_entity.cpp  base_entity.hpp
src/entity/: base_effect.hpp  base_entity.hpp  entity_list.hpp
src/factory/: Constants.hpp  definitions.hpp  engine.cpp  engine.hpp  flat_math.cpp
src/generators/: common_generator.cpp  common_generator.hpp  so_gens.cpp  so_gens.hpp
src/input/: input.cpp  input.hpp
src/physics/: base_physics.cpp  base_physics.hpp  collisions.cpp  collisions.hpp  district_net.cpp  physics.hpp  space_objects.cpp
src/shaders/: shader.cpp  shader.hpp
src/texts/: texts.cpp  texts.hpp
src/utils/: common.hpp  hash.hpp
src/utils/common/: matrix.cpp  matrix.tpp
src/window/: IOKeys.h  MainWindow.cpp  MainWindow.hpp
